--- a/Star Trek - Judgment Rites/dosbox_stjr.conf
+++ b/Star Trek - Judgment Rites/dosbox_stjr.conf
@@ -60,7 +60,7 @@ memsize=16
 #            Possible values: none, normal2x, normal3x, advmame2x, advmame3x, advinterp2x, advinterp3x, hq2x, hq3x, 2xsai, super2xsai, supereagle, tv2x, tv3x, rgb2x, rgb3x, scan2x, scan3x.
 
 frameskip=0
-aspect=false
+aspect=true
 scaler=normal2x
 
 [cpu]
@@ -85,8 +85,8 @@ scaler=normal2x
 core=auto
 cputype=auto
 cycles=max
-cycleup=500
-cycledown=500
+cycleup=1000
+cycledown=1000
 
 [mixer]
 #   nosound: Enable silent mode, sound is still emulated though.
