--- a/Wing Commander Privateer/dosboxPRIV.conf
+++ b/Wing Commander Privateer/dosboxPRIV.conf
@@ -85,8 +85,8 @@ scaler=normal2x
 core=auto
 cputype=auto
 cycles=max
-cycleup=500
-cycledown=500
+cycleup=1000
+cycledown=1000
 
 [mixer]
 #   nosound: Enable silent mode, sound is still emulated though.
@@ -113,7 +113,7 @@ prebuffer=25
 
 mpu401=intelligent
 mididevice=default
-midiconfig=0
+midiconfig=2
 
 [sblaster]
 #  sbtype: Type of Soundblaster to emulate. gb is Gameblaster.
@@ -136,7 +136,7 @@ midiconfig=0
 
 sbtype=sb16
 sbbase=220
-irq=7
+irq=5
 dma=1
 hdma=5
 sbmixer=true
@@ -198,10 +198,10 @@ disney=true
 #   buttonwrap: enable button wrapping at the number of emulated buttons.
 
 joysticktype=auto
-timed=true
+timed=false
 autofire=false
 swap34=false
-buttonwrap=false
+buttonwrap=true
 
 [serial]
 # serial1: set type of device connected to com port.
