--- a/Wing Commander Armada/dosbox_armada.conf
+++ b/Wing Commander Armada/dosbox_armada.conf
@@ -1,15 +1,13 @@
-# This is the configuration file for DOSBox 0.74-2. (Please use the latest version of DOSBox)
-# Lines starting with a # are comment lines and are ignored by DOSBox.
+# This is the configurationfile for DOSBox 0.74. (Please use the latest version of DOSBox)
+# Lines starting with a # are commentlines and are ignored by DOSBox.
 # They are used to (briefly) document the effect of each option.
 
 [sdl]
 #       fullscreen: Start dosbox directly in fullscreen. (Press ALT-Enter to go back)
 #       fulldouble: Use double buffering in fullscreen. It can reduce screen flickering, but it can also result in a slow DOSBox.
-#   fullresolution: What resolution to use for fullscreen: original, desktop or fixed size (e.g. 1024x768).
-#                     Using your monitor's native resolution (desktop) with aspect=true might give the best results.
+#   fullresolution: What resolution to use for fullscreen: original or fixed size (e.g. 1024x768).
+#                     Using your monitor's native resolution with aspect=true might give the best results.
 #                     If you end up with small window on a large screen, try an output different from surface.
-#                     On Windows 10 with display scaling (Scale and layout) set to a value above 100%, it is recommended
-#                     to use a lower full/windowresolution, in order to avoid window size problems.
 # windowresolution: Scale the window to this size IF the output device supports hardware scaling.
 #                     (output=surface does not!)
 #           output: What video system to use for output.
@@ -25,19 +23,19 @@
 
 fullscreen=true
 fulldouble=false
-fullresolution=desktop
+fullresolution=original
 windowresolution=original
 output=opengl
 autolock=true
 sensitivity=100
 waitonerror=true
 priority=higher,normal
-mapperfile=mapper-0.74-2.map
+mapperfile=mapper-0.74.map
 usescancodes=true
 
 [dosbox]
 # language: Select another language file.
-#  machine: The type of machine DOSBox tries to emulate.
+#  machine: The type of machine tries to emulate.
 #           Possible values: hercules, cga, tandy, pcjr, ega, vgaonly, svga_s3, svga_et3000, svga_et4000, svga_paradise, vesa_nolfb, vesa_oldvbe.
 # captures: Directory where things like wave, midi, screenshot get captured.
 #  memsize: Amount of memory DOSBox has in megabytes.
@@ -52,11 +50,9 @@ memsize=16
 
 [render]
 # frameskip: How many frames DOSBox skips before drawing one.
-#    aspect: Do aspect correction, if your output method doesn't support scaling this can slow things down!
-#    scaler: Scaler used to enlarge/enhance low resolution modes. If 'forced' is appended,
-#              then the scaler will be used even if the result might not be desired.
-#              To fit a scaler in the resolution used at full screen may require a border or side bars,
-#              to fill the screen entirely, depending on your hardware, a different scaler/fullresolution might work.
+#    aspect: Do aspect correction, if your output method doesn't support scaling this can slow things down!.
+#    scaler: Scaler used to enlarge/enhance low resolution modes.
+#              If 'forced' is appended, then the scaler will be used even if the result might not be desired.
 #            Possible values: none, normal2x, normal3x, advmame2x, advmame3x, advinterp2x, advinterp3x, hq2x, hq3x, 2xsai, super2xsai, supereagle, tv2x, tv3x, rgb2x, rgb3x, scan2x, scan3x.
 
 frameskip=0
@@ -64,8 +60,7 @@ aspect=true
 scaler=normal2x
 
 [cpu]
-#      core: CPU Core used in emulation. auto will switch to dynamic if available and
-#            appropriate.
+#      core: CPU Core used in emulation. auto will switch to dynamic if available and appropriate.
 #            Possible values: auto, dynamic, normal, simple.
 #   cputype: CPU Type used in emulation. auto is the fastest choice.
 #            Possible values: auto, 386, 386_slow, 486_slow, pentium_slow, 386_prefetch.
@@ -74,19 +69,20 @@ scaler=normal2x
 #            Cycles can be set in 3 ways:
 #              'auto'          tries to guess what a game needs.
 #                              It usually works, but can fail for certain games.
-#              'fixed #number' will set a fixed amount of cycles. This is what you usually
-#                              need if 'auto' fails. (Example: fixed 4000).
-#              'max'           will allocate as much cycles as your computer is able to
-#                              handle.
+#              'fixed #number' will set a fixed amount of cycles. This is what you usually need if 'auto' fails.
+#                              (Example: fixed 4000).
+#              'max'           will allocate as much cycles as your computer is able to handle.
+#            
 #            Possible values: auto, fixed, max.
-#   cycleup: Amount of cycles to decrease/increase with keycombos.(CTRL-F11/CTRL-F12)
+#   cycleup: Amount of cycles to decrease/increase with keycombo.(CTRL-F11/CTRL-F12)
 # cycledown: Setting it lower than 100 will be a percentage.
 
 core=auto
 cputype=auto
-cycles=max
-cycleup=500
-cycledown=500
+cycles=fixed 12500
+cycleup=1000
+cycledown=1000
+
 
 [mixer]
 #   nosound: Enable silent mode, sound is still emulated though.
@@ -98,22 +94,20 @@ cycledown=500
 
 nosound=false
 rate=49716
-blocksize=1024
-prebuffer=25
+blocksize=2048
+prebuffer=80
 
 [midi]
 #     mpu401: Type of MPU-401 to emulate.
 #             Possible values: intelligent, uart, none.
 # mididevice: Device that will receive the MIDI data from MPU-401.
 #             Possible values: default, win32, alsa, oss, coreaudio, coremidi, none.
-# midiconfig: Special configuration options for the device driver. This is usually the id of the device you want to use
-#               (find the id with mixer/listmidi).
-#               Or in the case of coreaudio, you can specify a soundfont here.
+# midiconfig: Special configuration options for the device driver. This is usually the id of the device you want to use.
 #               See the README/Manual for more details.
 
 mpu401=intelligent
 mididevice=default
-midiconfig=0
+midiconfig=2
 
 [sblaster]
 #  sbtype: Type of Soundblaster to emulate. gb is Gameblaster.
@@ -141,7 +135,7 @@ dma=1
 hdma=5
 sbmixer=true
 oplmode=auto
-oplemu=default
+oplemu=compat
 oplrate=44100
 
 [gus]
@@ -194,13 +188,13 @@ disney=true
 #               Possible values: auto, 2axis, 4axis, 4axis_2, fcs, ch, none.
 #        timed: enable timed intervals for axis. Experiment with this option, if your joystick drifts (away).
 #     autofire: continuously fires as long as you keep the button pressed.
-#       swap34: swap the 3rd and the 4th axis. Can be useful for certain joysticks.
+#       swap34: swap the 3rd and the 4th axis. can be useful for certain joysticks.
 #   buttonwrap: enable button wrapping at the number of emulated buttons.
 
-joysticktype=auto
-timed=true
+joysticktype=none
+timed=false
 autofire=false
-swap34=false
+swap34=true
 buttonwrap=false
 
 [serial]
