--- a/Wing Commander Privateer/dosboxPRIV_single.conf
+++ b/Wing Commander Privateer/dosboxPRIV_single.conf
@@ -2,10 +2,11 @@
 ipx=false
 
 [autoexec]
+# Lines in this section will be run at startup.
 @echo off
-mount c ".."
+mount C ".."
 mount C "..\cloud_saves" -t overlay
-imgmount d "..\STJR1.dat" -t iso -fs iso
+imgmount d "..\game.gog" -t iso -fs iso
 c:
 goto launcher
 
@@ -13,47 +14,35 @@ goto launcher
 cls
 ECHO [1;33m[42mษออออออออออออออออออออออออออออออออออออออออออออป
 ECHO บ ------------------------------------------ บ
-ECHO บ  Star Trek: Judgment Rites Launcher        บ
+ECHO บ  Wing Commander Privateer Launcher         บ
 ECHO บ ------------------------------------------ บ
-ECHO บ  1) Star Trek: Judgment Rites              บ
-ECHO บ  2) Collector's CD Bonus Materials         บ
+ECHO บ  1) Privateer                              บ
+ECHO บ  2) Privateer - Righteous Fire             บ
 ECHO บ  3) Setup                                  บ
 ECHO บ ------------------------------------------ บ
 ECHO บ  4) exit program                           บ
 ECHO บ ------------------------------------------ บ
 ECHO ศออออออออออออออออออออออออออออออออออออออออออออผ[0m
 
-choice /c1234 /s Which program do you want to run? [1-4]: /n 
+@choice /c1234 /s Which game do you want to run? [1-4]: /n 
 if errorlevel 4 goto exit
 if errorlevel 3 goto setup
-if errorlevel 2 goto bonus
-if errorlevel 1 goto game
+if errorlevel 2 goto rf
+if errorlevel 1 goto priv
 
-:game
-cd TREK2
+:priv
 cls
-pictview title.png
-trekjr
+priv.exe
 goto exit
 
-:bonus
+:rf
 cls
-mount -u d
-imgmount d "..\STJR2.dat" -t iso -fs iso
-d:
-cls
-1
-mount -u d
-imgmount d "..\STJR1.dat" -t iso -fs iso
-c:
-goto launcher
+priv r
+goto exit
 
 :setup
-cd TREK2
 cls
-pictview title.png
-install.bat
-c:
+install.exe
 goto launcher
 
 :exit
